// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.protocol;

option java_package = "org.wfanet.measurement.protocol";
option java_multiple_files = true;

// The keys to identity a requisition in the MetricValue database
message RequisitionKey {
  string data_provider_id = 1;
  string campaign_id = 2;
  string metric_requisition_id = 3;
}
